k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-chatrag
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-chatrag
  template:
    metadata:
      labels:
        app: frontend-chatrag
    spec:
      imagePullSecrets:
      - name: aliyun-acr-secret
      containers:
      - name: frontend-chatrag
        image: crpi-v27gqzero2fjya51.cn-guangzhou.personal.cr.aliyuncs.com/llmproject/frontend_chatrag:latest
        ports:
        - containerPort: 80
        resources:
          requests: {cpu: 50m, memory: 64Mi}
          limits: {cpu: 200m, memory: 128Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-chatrag
  namespace: app
spec:
  selector: {app: frontend-chatrag}
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
